--- a/assets/scss/home-style.scss
+++ b/assets/scss/home-style.scss
@@ -1,20 +1,35 @@
 .hero{
   position: relative;
 
+  .container{
+    position: relative;
+
+    &::before{
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 44%;
+      background: url('../../../assets/images/blue-dots.svg') no-repeat; 
+      width: 77px;
+      height: 50px;
+      }
+  }
+
   &::after{
     content: "";
     position: absolute;
     bottom: 50px;
     right: 0px;
-    background: url('../../../assets/images/msg-logo.svg');
-    background-repeat: no-repeat;
+    background: url('../../../assets/images/msg-logo.svg') no-repeat;
     width: 62px;
     height: 60px;
   }
+
     .hero-row
     {
       background: $bg-color;
       @include rounded(10px);
+
         .hero-left{
           max-width: 390px;
           margin: auto;
@@ -25,6 +40,25 @@
           p{
               @include text-style(500, 20px,32px,0%);
               margin-top: 16px;
+              color: $small-font-text;
+              opacity: 80%;
+          }
+          .btn{
+            width: 167px;
+            height: 52px;
+          }
+
+          @media #{$brkmx768}{
+            h2{
+              @include text-style(500, 25px,30px,0%);
+            }
+            p{
+              @include text-style(500, 12px,15px,0%);
+            }
+            .btn{
+              width: 140px;
+              height: 42px;
+            }
           }
         }
         .hero-right{
@@ -37,8 +71,7 @@
               position: absolute;
               top: 150px;
               right: 20px;
-              background: url('../../../assets/images/hero-number.svg');
-              background-repeat: no-repeat;
+              background: url('../../../assets/images/hero-number.svg') no-repeat;
               width: 19px;
               height: 168px;
             }
@@ -86,12 +119,17 @@
           &:hover {
             background-color: #a4caf8;
           }
-      }
+        }
       }
 
       .swiper {
         width: 100%;
         height: 141px;
+        margin-top: 70px;
+
+        @media #{$brkmx768}{
+          margin-top: 30px;
+          }
         }
 
         .swiper-slide {
@@ -115,6 +153,15 @@
           border: 2px solid #1379FF;
           border-radius: 4px;
         }
+  }
+}
+@media #{$brkmx768}
+{
+  .categories{
+    margin-bottom: 50px;
+    .container{
+      margin-top: 30px;
+    }
   }
 }
 
@@ -142,8 +189,36 @@
                 border-bottom: 1px solid $main-color;
                 color: $main-color;
             }
+            @media #{$brkmx768}{
+              @include text-style(300, 13px,10px,0%);
+            }
         }
 
+        .tab-wrapper {
+          -webkit-overflow-scrolling: touch;
+          display: flex;
+          justify-content: center;
+          overflow-x: auto;
+          width: 100%;
+        }
+
+        @media (max-width: 768px) {
+          .tab-scroll {
+            display: flex;
+            flex-wrap: nowrap !important;
+            white-space: nowrap;
+            gap: 10px;
+          }
+        
+          .nav-item {
+            flex: 0 0 auto;
+          }
+        
+          .nav-link {
+            white-space: nowrap;
+          }
+        }
+        
         .card-hover {
           position: absolute;
           top: 0;
@@ -189,11 +264,10 @@
         }
     }
 }
-
 /*Subscription style start*/
 
 .Subscription{
-  background: rgba(241, 247, 255, 1);
+  background:#F1F7FF;
   margin-top: 64px;
   padding-bottom: 64px;
   .container{
@@ -204,21 +278,24 @@
       p{
         max-width: 607px;
         width: 100%;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 32px;
-        letter-spacing: 0%;
+        @include text-style(500,16px,32px,0%);
         text-align: center;
-        opacity: 0.8;
+        opacity: 80%;
         margin: 0 auto;
     }
 
       span{
         color: $main-color;
       }
+
+      @media #{$brkmx768}
+      {
+        p{
+          @include text-style(500,14px,28px,0%);
+        }
+      }
     }
     .nav {
-
       margin-top: 48px;
       margin-bottom: 64px;
       .nav-item {
@@ -239,12 +316,21 @@
           @include text-style(400, 20px,20px,0%);
         }
       }
+
+      @media #{$brkmx768}
+      {
+        margin-top: 20px;
+        margin-bottom: 40px;
+          .nav-item{
+            height: 50px;
+            margin-top: 10px;
+          }
+      }
     }
     .left-card{
       min-height: 429px;
-      // max-width: 263px;
-      // width: 100%;
-
+      width: 100%;
+      z-index: 222;
       h3{
         @include text-style(700, 20px,20px,0%);
         color: $main-color;
@@ -304,7 +390,8 @@
             height: 20px;
           }
         }
-    }}
+      }
+    }
   }
 }
 
@@ -328,6 +415,14 @@
           span{
             @include text-style(400,40px,40px,0);
           }
+
+          @media #{$brkmx768}
+          {
+            @include text-style(700,30px,35px,0);
+            span{
+              @include text-style(400,30px,35px,0);
+            }
+          }
       }
 
       .btn{
@@ -338,10 +433,16 @@
         background-color: $white;
         color: $main-color;
       }
+
+      @media #{$brkmx768}
+      {
+        .btn{
+          margin-bottom: 10px;
+        }
+      }
     }
 
     .deal-right {
-    
       img {
         width: 100%;
         height: 100%;
@@ -356,6 +457,12 @@
       margin-top: 64px;
       margin-bottom: 64px;
       text-align: center;
+
+      @media #{$brkmx768}
+      {
+        margin-top: 30px;
+        margin-bottom: 30px;
+      }
     }
 
     .swiper {
@@ -380,7 +487,6 @@
       opacity: 0.4;
     }
 
-    // Active slides
     .swiper-slide-active,
     .swiper-slide-duplicate-active {
       filter: none;
@@ -477,7 +583,7 @@
       color: #1379FF;
     }
     
-    @media (max-width: 768px) {
+    @media #{$brkmx768} {
       .swiper-slide {
         flex-direction: column;
         align-items: center;
@@ -508,10 +614,12 @@
   gap: 30px;
   margin-top: 64px;
 
-  @media (min-width: 768px) {
+  @media #{$brkmx768} {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    margin-top: 30px;
+    padding: 38px 30px;
   }
 
   .company-col1 {
@@ -519,15 +627,27 @@
     max-width: 204px;
     text-align: center;
 
+
     @media (min-width: 768px) {
       text-align: left;
-      border-right: 4px solid $main-color;
+      border-right: 2px solid $main-color;
       padding-right: 20px;
     }
 
     p {
       @include text-style(700, 35px, 38px, 0%);
       margin: 0;
+    }
+
+    img{
+      width: 19px;
+      height: 39px;
+      @include rounded(4px);
+      margin-top: 20px;
+
+      @media #{$brkmx768}{
+        display: none;
+      }
     }
   }
 
@@ -544,173 +664,3 @@
     }
   }
 }
-
-
-/*footer*/
-footer {
-  margin-top: 115px;
-  background-color: $bg-color;
-  .container {
-    position: relative;
-
-    .footer-upper {
-      width: 100%;
-      background-color: $main-color;
-      color: $white;
-      @include rounded(10px);
-      padding: 28px 20px;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      align-items: center;
-      position: absolute;
-      top: -50px;
-      left: 0;
-
-      @media (max-width: 900px)
-      {
-        position: static;
-        top: auto;
-        left: auto;
-      }
-
-      .footer-upper-left {
-        flex-grow: 1;    
-        flex-shrink: 1; 
-        flex-basis: 300px;  
-        // margin-bottom: 20px;
-
-        h3 {
-          @include text-style(700, 18px, 38px, 0%);
-          text-transform: capitalize;
-        }
-        p {
-          @include text-style(400, 14px, 24px, 0%);
-        }
-      }
-      .input-wrapper {
-        position: relative;
-        width: 100%;
-      
-        input {
-          width: 80%;
-          padding-right: 110px;
-          height: 48px;
-          border-radius: 6px;
-          border: none;
-        }
-      
-        .submit-btn {
-          position: absolute;
-          width: 100%;
-          max-width: 135px;
-          top: -18%;
-          right: 30px;
-          transform: translateY(-50%);
-          height: 48px;
-          padding: 0 16px;
-          font-size: 14px;
-          border-radius: 10px;
-          color: $bg-color;
-          border: 2px solid $bg-color;
-        }
-
-        @media (max-width: 900px) {
-          input {
-            width: 100%;
-            padding-right: 0;
-            margin-bottom: 2px;
-          }
-          .submit-btn {
-            position: static;
-            transform: none;
-            width: 100%;
-            max-width: 100%;
-            height: 44px;
-          }
-        }
-      }
-    }
-    @media (max-width: 768px) {
-      .footer-upper {
-        flex-direction: column;
-
-      .footer-upper-right, .footer-upper-left{
-        flex-basis: 100px;
-      }
-
-        .footer-upper-right .input-wrapper {
-          flex-direction: column;
-          width: 100%;
-
-          input, .submit-btn {
-            width: 100%;
-          }
-        }
-      }
-    }
-
-    .footer-lower{
-      padding-top: 113px;
-      .f-col-1{
-          li{
-            display: inline;
-          }
-          .fa-linkedin, .fa-facebook-f, .fa-twitter{
-            margin-top: 30px;
-            width: 42px;
-            height: 42px;
-            border: 2px solid rgba(19, 121, 255, 0.3);
-            border-radius: 50%;
-            text-align: center;
-            line-height: 42px;
-            color: $main-color;
-        }
-      }
-      .f-col-2{
-        h5{
-            @include text-style(700,16px,20px,0%);
-            color: $main-color;
-        }
-        .nav{
-          margin-top: 24px;
-          .nav-link{
-            @include text-style(500,14px,20px,0);
-            color: $small-font-text;
-            margin: 0;
-            padding: 0;
-            margin-bottom: 16px;
-            // border: 2px solid beige;
-          }
-        }
-      }
-      .f-last-row{
-        margin-bottom: 33px;
-        .f-last-left{
-          .fa-phone-volume, .fa-envelope ,.fa-location-dot{
-            width: 48px;
-            height: 48px;
-            border-radius: 50%;
-            background-color: white;
-            color: $main-color;
-            line-height: 48px;
-            text-align: center;
-          }
-        }
-        .f-last-right{
-          h6{
-            @include text-style(400,16px,20px,0);
-            color: $main-color;
-            margin-bottom: 8px
-          }
-          p{
-            @include text-style(500,14px,20px,0);
-            color: $small-font-text;
-          }
-        }
-      }
-    }
-  }
-}
-
-
