--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -10919,6 +10919,17 @@ img {
   text-align: center;
 }
 
+.section-wapper {
+  margin-top: 64px;
+  margin-bottom: 64px;
+}
+@media (max-width: 425px) {
+  .section-wapper {
+    margin-top: 24px;
+    margin-bottom: 24px;
+  }
+}
+
 .header-row {
   margin-top: 16px;
   margin-bottom: 12px;
@@ -10936,7 +10947,8 @@ img {
   -webkit-border-radius: 30px;
   background: #F1F7FF;
   border: none;
-  background-image: url("../../../assets/images/search-Icon.svg") no-repeat;
+  background-image: url("../../../assets/images/search-Icon.svg");
+  background-repeat: no-repeat;
   background-size: 20px 20px;
   background-position: 12px center;
 }
@@ -11270,12 +11282,6 @@ footer .container .footer-lower .f-last-row .f-last-right p {
 }
 
 /*category style start*/
-.categories {
-  margin-bottom: 120px;
-}
-.categories .container {
-  margin-top: 64px;
-}
 .categories .container .cate-heading {
   margin-bottom: 64px;
 }
@@ -11394,7 +11400,8 @@ footer .container .footer-lower .f-last-row .f-last-right p {
     white-space: nowrap;
   }
 }
-.product .container .card-hover {
+
+.card-hover {
   position: absolute;
   top: 0;
   left: 0;
@@ -11409,12 +11416,12 @@ footer .container .footer-lower .f-last-row .f-last-right p {
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
 }
-.product .container .card-hover .hover-btn {
+.card-hover .hover-btn {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.product .container .card-hover .hover-btn .h-btn1, .product .container .card-hover .hover-btn .h-btn2 {
+.card-hover .hover-btn .h-btn1, .card-hover .hover-btn .h-btn2 {
   border-radius: 10px;
   padding: 8px 40px;
   font-weight: 700;
@@ -11423,17 +11430,18 @@ footer .container .footer-lower .f-last-row .f-last-right p {
   letter-spacing: 0%;
   border: none;
 }
-.product .container .card-hover .hover-btn .h-btn1 {
+.card-hover .hover-btn .h-btn1 {
   background-color: #fff;
   color: #1379FF;
 }
-.product .container .card-hover .hover-btn .h-btn2 {
+.card-hover .hover-btn .h-btn2 {
   background-color: transparent;
   border: 1px solid #fff;
   color: #fff;
   margin-top: 13px;
 }
-.product .container .card:hover .card-hover {
+
+.card:hover .card-hover {
   opacity: 1;
   visibility: visible;
 }
@@ -11441,7 +11449,6 @@ footer .container .footer-lower .f-last-row .f-last-right p {
 /*Subscription style start*/
 .Subscription {
   background: #F1F7FF;
-  margin-top: 64px;
   padding-bottom: 64px;
 }
 .Subscription .container .sub-title .title {
@@ -11650,9 +11657,8 @@ footer .container .footer-lower .f-last-row .f-last-right p {
      object-fit: contain;
 }
 
+/*client style*/
 .client .container .title {
-  margin-top: 64px;
-  margin-bottom: 64px;
   text-align: center;
 }
 @media (max-width: 767.98px) {
@@ -11790,7 +11796,6 @@ footer .container .footer-lower .f-last-row .f-last-right p {
   display: flex;
   flex-direction: column;
   gap: 30px;
-  margin-top: 64px;
 }
 @media (max-width: 767.98px) {
   .company {
@@ -11842,4 +11847,152 @@ footer .container .footer-lower .f-last-row .f-last-right p {
 }
 .company .company-col .swiper-slide {
   width: auto;
+}
+
+/*our product 
+
+        style start
+
+                  From here*/
+/*pro-title style*/
+.pro-title .container {
+  text-align: center;
+  background-color: #F1F7FF;
+  padding: 32px 0;
+}
+.pro-title .container h2, .pro-title .container .h2 {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 40px;
+  letter-spacing: 0%;
+  margin: 0;
+  padding: 0;
+}
+.pro-title .container .direction {
+  gap: 15px;
+}
+.pro-title .container .direction a {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.2px;
+  color: #3A3A3A;
+}
+.pro-title .container .direction .active {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.2px;
+  color: #1379FF;
+}
+
+/*main section style*/
+.pro-main .container {
+  /*left side card */
+}
+.pro-main .container .pro-left-upper-card {
+  margin-bottom: 31px;
+}
+.pro-main .container .pro-left-upper-card h5, .pro-main .container .pro-left-upper-card .h5 {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0%;
+  color: #1379FF;
+  display: inline;
+  margin-top: 10px;
+}
+.pro-main .container .pro-left-upper-card .btn1 {
+  padding: 8px 24px;
+  border-radius: 4px;
+  border: 1px solid rgba(137, 137, 137, 0.3);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0%;
+  color: #4A4A4A;
+  background-color: transparent;
+}
+.pro-main .container .pro-left-upper-card .btn1:hover {
+  background-color: #1379FF;
+  color: #fff;
+}
+.pro-main .container .pro-left-card .Category-drop {
+  border-bottom: 1px solid rgba(137, 137, 137, 0.3);
+}
+.pro-main .container .pro-left-card .Category-drop .drop-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0%;
+  color: #3A3A3A;
+}
+.pro-main .container .pro-left-card .Category-drop .fa-angle-down {
+  font-size: 20px;
+}
+.pro-main .container .pro-left-card .Category-drop .check-label {
+  color: #4A4A4A;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  margin-left: 6px;
+}
+.pro-main .container .pro-left-card .Category-drop .show-more-text {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0%;
+  text-decoration: underline;
+  text-decoration-style: solid;
+  text-decoration-thickness: 0%;
+  color: #1379FF;
+  margin-top: 16px;
+  margin-bottom: 15px;
+}
+.pro-main .container .pro-right-card {
+  position: relative;
+}
+.pro-main .container .pro-right-card::after {
+  content: "";
+  position: absolute;
+  top: 200px;
+  right: -100px;
+  background: url("../../../assets/images/msg-logo.svg") no-repeat;
+  width: 62px;
+  height: 60px;
+}
+.pro-main .container .pro-right-card .pro-right-text {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0%;
+  color: #3A3A3A;
+}
+.pro-main .container .pro-right-card .custom-pagination {
+  display: flex;
+  gap: 8px;
+  justify-content: center;
+  margin-top: 82px;
+}
+.pro-main .container .pro-right-card .custom-pagination .page-item .page-link {
+  max-width: 40px;
+  width: 100%;
+  height: 40px;
+  border: 1px solid #F3F3F3;
+  border-radius: 4px;
+  padding: 8px;
+  color: #000;
+  text-align: center;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0%;
+  color: #3A3A3A;
+  background-color: #fff;
+  transition: background-color 0.2s, color 0.2s;
+}
+.pro-main .container .pro-right-card .custom-pagination .page-item .page-link:hover {
+  background-color: #1379FF;
+  color: #fff;
 }
