--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -13,7 +13,8 @@
       @include rounded(30px);
       background: #F1F7FF;
       border: none;
-      background-image: url('../../../assets/images/search-Icon.svg') no-repeat;
+      background-image: url('../../../assets/images/search-Icon.svg');
+      background-repeat: no-repeat;
       background-size: 20px 20px;
       background-position: 12px center;
     }
