--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -19,7 +19,7 @@ body {
 html{
 	overflow-x: hidden !important;
 }
-/* COMMON DESIGN START */
+// /* COMMON DESIGN START */
 
 a {
 	text-decoration: none;
@@ -49,10 +49,17 @@ ol {
 
 /*new common style*/
 
-.container {
-	max-width: 1140px;
-	width: 100%;
-	margin: 0 auto;
+//sections top bottom padding
+.section-wapper
+{
+	padding-top: 64px;
+	padding-bottom: 64px;
+
+	@media (max-width:425px)
+	{
+		padding-top: 24px;
+		padding-bottom: 24px;
+	}
 }
 
 img {
@@ -60,13 +67,11 @@ img {
 	height: auto;
 }
 
-
 /*title style*/
 .title{
     @include text-style(700, 32px,40px,0%);
     text-align: center;
-    color: #3A3A3A;
-    margin-bottom: 32px;
+    color: $heading-color; 
 }
 @media #{$brkmx768} {
 	.title {
@@ -77,12 +82,15 @@ img {
   
 
 /*button style*/
+
+.btn-outline-primary
+{
+	border-color: $main-color;
+}
 .btn{
 	border-radius: 10px;
-	border-width: 2px;
 	padding: 14px 32px;
-	border: 2px solid $main-color;
-	color: $main-color;
+	border: 2px solid;
 	margin-top: 32px;
 }
 .btn:hover{
@@ -90,13 +98,21 @@ img {
 	color: $white;
 }
 @media #{$brkmx768}{
-	.btn {
+	.btn, .bg-btn {
 	  padding: 10px 24px;
 	  font-size: 14px;
 	  margin-top: 24px;
 	}
   }
-  
+
+.fill-btn
+{
+	&:hover{
+		background-color: transparent;
+		color: $main-color;
+	}
+}
+
 /*card style*/
 .card{
 	position: relative;
@@ -116,20 +132,87 @@ img {
 		  margin-bottom: 8px;
 		}
 	}
-.btn1{
-  margin-top: 16px;
-  text-align: center;
-}   
 
-.section-wapper
-{
-	margin-top: 64px;
-	margin-bottom: 64px;
+//hover card style
+.card-hover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(74, 74, 74, 0.7);
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+    z-index: 2;
+    @include rounded(10px);
+  
+    .hover-btn {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
 
-	@media (max-width:425px)
-	{
-		margin-top: 24px;
-		margin-bottom: 24px;
+      .h-btn1, .h-btn2 {
+        border-radius: 10px;
+        padding: 8px 40px;
+        @include text-style(700, 16px,20px,0%);
+        border: none;
+      }
+  
+      .h-btn1 {
+        color: $main-color;
+  
+        &:hover{
+          background-color: $main-color;
+          color: $white;
+        }
+      }
+  
+      .h-btn2 {
+        border: 1px solid $white;
+        margin-top: 13px;
+      }
+    }
+  }
+  .card:hover .card-hover {
+    opacity: 1;
+    visibility: visible;
+  }
+/*pro-title style*/
+.pro-title{
+	.container-xl{
+	  background-color: $bg-color;
+	  padding: 32px 0;
+  
+	  .page-title{
+		  @include text-style(700,32px,40px,0%);
+	  }
+  
+	  .direction{
+		gap: 15px;
+  
+		a{
+		  @include text-style(400,16px,24px,-0.2px);
+		  color: $heading-color;
+		}
+  
+		.active
+		{
+		  @include text-style(500,16px,24px,-0.2px);
+		  color: $main-color;
+		}
+
+		@media (max-width: 375px){
+			a{
+				@include text-style(400,13px,24px,-0.2px);
+			}
+			.active
+			{
+		  		@include text-style(500,13px,24px,-0.2px);
+			}
+		}
+	  }
 	}
-}
+  }
+  
 
