--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -151,19 +151,18 @@
     letter-spacing: $letter-spacing;
 }
 
-//after msg box mixins
+//msg logo
 
-@mixin msg-box($top,$bottom,$left,$right)
-{
-  &::after{
+@mixin msg-logo($top: auto, $right: auto, $bottom: auto, $left: auto) {
     content: "";
     position: absolute;
     top: $top;
-    left: $left;
-    bottom: $bottom;
     right: $right;
+    bottom: $bottom;
+    left: $left;
     background: url('../../../assets/images/msg-logo.svg') no-repeat;
     width: 62px;
     height: 60px;
   }
-}
+  
+  
